--- a/page2.html
+++ b/page2.html
@@ -286,7 +286,8 @@
                 </div>
             </footer>
         </div>
-		<script>
+<style>
+	
 /*------------------------------------------------------------------
 [Master Stylesheet]
 
@@ -1130,7 +1131,9 @@ ul.number li,ul.arrow li,ul.star li,ul.heart li{font-size:14px;color:#8b8b8b;lin
 .marg30-bot{margin-bottom: 30px;}
 
 .marg0{margin: 0;}
-</script>
+
+</style>
+
         <script type="text/javascript" src="js/jquery.min.js"></script> 
         <script type="text/javascript" src="js/Chart.min.js"></script> 
         <script type="text/javascript" src="js/jquery.flexslider.min.js"></script>
