--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>YMH Ventures | Voktis Group</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="new.css">
+        <link rel="stylesheet" type="text/css" href="style/new.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css">
         <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
         <link rel="stylesheet" type="text/css" href="css/mediaplayer.css">
